--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
         <version>${tomcat.version}</version>
     </dependency>
   </dependencies>
+  <dependency>
+  <groupId>mysql</groupId>
+  <artifactId>mysql-connector-java</artifactId>
+  <version>8.0.12</version>
+</dependency>
   <build>
     <finalName>embeddedTomcatSample</finalName>
     <plugins>
